# python-formula-compiler

./: LICENSE.txt  README.md  ast_compiler.py  main.py  pyproject.toml
formula_compiler/: __init__.py  formula_compiler.py  formula_lexer.py  formula_parser.py  formula_tokens.py
formula_parser/: __init__.py  lexer.py  parser.py  tokens.py
src/formula_compiler/: __init__.py  ast_compiler.py  compiler.py  lexer.py  parser.py  tokens.py
tests/: test_ast_compiler.py  test_compiler.py  test_lexer.py  test_operators.py
